<resources>
    <string name="app_name">游戏杂坛</string>


    <!--bottom bar text-->
    <string name="message">图场</string>
    <string name="square">广场</string>
    <string name="attention">开眼</string>
    <string name="mine">我的</string>


    <!--index home fragment inner viewpager title-->
    <string name="recommend">推荐</string>
    <string name="game">游戏</string>
    <string name="joke">段子</string>
    <string name="picture">热图</string>


    <string name="forum_count">(%1$s)</string>
    <string name="theme_count">主题：%1$s</string>
    <string name="post_count">贴数：%1$s</string>
    <string name="today_count">今日：%1$s</string>


    <!--title-->
    <string name="title_about">关于</string>
    <string name="title_forum">论坛</string>
    <string name="title_login">登录</string>
    <string name="title_register">注册</string>
    <string name="title_post">帖子列表</string>
    <string name="title_post_detail">贴子详情</string>
    <string name="title_personal_home_page">个人主页</string>


    <string name="app_about">本客户端通过jsoup结合RXJAVA实现对多玩论坛网站的网页的抓取，进行显示,仅作为对Android技术的学习实践。做的还是很糙的，主要是练手自己做一个项目从0到上线，如果有需要，请联系我bolevw@gmail.com\n版本号1.0</string>
    <string name="skip">skip</string>
    <string name="sign_in">签到</string>
    <string name="the_all_forum">全部帖子</string>
    <string name="child_module">子模块</string>
    <string name="video">视频</string>
    <string name="login_warning">输入注册的账号密码，以进行登录（注意:这里与你的yy密码不通用）</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="verify_code">输入验证码</string>
    <string name="change">换一张</string>
    <string name="login_self">1周内自动登录</string>
    <string name="login">登录</string>
    <string name="find_password">找回密码</string>
    <string name="sigin_in_account">注册账号</string>
    <string name="money">金钱</string>
    <string name="prestige">威望</string>
    <string name="duowan_glass">多玩草</string>
    <string name="it_theme">Ta的主题</string>
    <string name="it_friends">Ta的好友</string>
    <string name="save">保存</string>
    <string name="write_comment">写评论...</string>
    <string name="publish">发布</string>
    <string name="comment">评论</string>
    <string name="sign_up">注册</string>
    <string name="stop">stop</string>
    <string name="comment_hint">好的评论会被人赞哦!!</string>
    <string name="choose_area">选择大区</string>
    <string name="user_name">召唤师名称</string>
    <string name="search">search</string>
    <string name="set_avatar">是否设置为头像</string>
    <string name="set">设置</string>
    <string name="set_suc">设置成功</string>
    <string name="un_open">维护中。。。</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
