<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_background_white"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/headView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/lolAreaButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/choose_area" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/userIdEditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:hint="@string/user_name"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_hint_color"
            android:textSize="@dimen/text_normal" />
    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/headView"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:text="@string/search" />

    <RelativeLayout
        android:id="@+id/avatarContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchButton"
        android:gravity="center"
        android:visibility="invisible">


        <com.boger.game.gc.widget.CircleImageView
            android:id="@+id/avatarImageView"
            android:layout_width="40dp"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/avatarImageView"
            android:text="@string/set_avatar"
            android:textSize="13sp" />

        <Button
            android:id="@+id/setAvatarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text"
            android:layout_toRightOf="@+id/avatarImageView"
            android:minHeight="10dp"
            android:text="@string/set"
            android:textSize="12sp" />

        <android.support.v4.widget.ContentLoadingProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/text"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/setSuccessTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/text"
            android:text="@string/set_suc"
            android:visibility="invisible" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/resultRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/avatarContainer"
        android:layout_marginTop="1px" />

    <com.boger.game.gc.widget.LoadingView
        android:id="@+id/loadingView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/searchButton"
        android:visibility="gone" />

    <com.boger.game.gc.widget.LoadingFailView
        android:id="@+id/loadingFailView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/searchButton"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>